...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oa5-yQ-Y1a">
                                        <rect key="frame" x="0.0" y="0.0" width="354" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="xFA-n8-5ci"/>
                                        </constraints>
                                        <state key="normal" title="Sign in">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <variation key="default">
                                            <mask key="constraints">
                                                <exclude reference="xFA-n8-5ci"/>
                                            </mask>
...
                                            </mask>
                                        </variation>
                                        <connections>
                                            <action selector="signInTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="741-0z-Tn1"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C2X-rx-fBx">
                                        <rect key="frame" x="0.0" y="50" width="354" height="60"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="RSw-Xf-Vcm">
                                                <variation key="heightClass=regular-widthClass=compact" constant="60"/>
                                            </constraint>
                                        </constraints>
...
                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OGg-s3-agV">
                                                <rect key="frame" x="250" y="0.0" width="124" height="40"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pg6-qs-MTa">
                                                        <rect key="frame" x="0.0" y="0.0" width="124" height="40"/>
                                                        <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <state key="normal" image="uncheckbox"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
                                                                <integer key="value" value="1"/>
                                                            </userDefinedRuntimeAttribute>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
